--- a/puzzles/d02.html
+++ b/puzzles/d02.html
@@ -1,179 +1,7 @@
-<!DOCTYPE html>
-<html lang="en-us"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<meta charset="utf-8">
-<title>Day 2 - Advent of Code 2021</title>
-<!--[if lt IE 9]><script src="/static/html5.js"></script><![endif]-->
-<link href="shared_files/css.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="shared_files/style.css">
-<link rel="stylesheet alternate" type="text/css" href="shared_files/highcontrast.css" title="High Contrast">
-<link rel="shortcut icon" href="https://adventofcode.com/favicon.png">
-</head><!--
-
-
-
-
-Oh, hello!  Funny seeing you here.
-
-I appreciate your enthusiasm, but you aren't going to find much down here.
-There certainly aren't clues to any of the puzzles.  The best surprises don't
-even appear in the source until you unlock them for real.
-
-Please be careful with automated requests; I'm not a massive company, and I can
-only take so much traffic.  Please be considerate so that everyone gets to play.
-
-If you're curious about how Advent of Code works, it's running on some custom
-Perl code. Other than a few integrations (auth, analytics, social media), I
-built the whole thing myself, including the design, animations, prose, and all
-of the puzzles.
-
-The puzzles are most of the work; preparing a new calendar and a new set of
-puzzles each year takes all of my free time for 4-5 months. A lot of effort
-went into building this thing - I hope you're enjoying playing it as much as I
-enjoyed making it for you!
-
-If you'd like to hang out, I'm @ericwastl on Twitter.
-
-- Eric Wastl
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
--->
-<body>
-<header><div><h1 class="title-global"><a href="https://adventofcode.com/">Advent of Code</a></h1><nav><ul><li><a href="https://adventofcode.com/2021/about">[About]</a></li><li><a href="https://adventofcode.com/2021/events">[Events]</a></li><li><a href="https://teespring.com/stores/advent-of-code" target="_blank">[Shop]</a></li><li><a href="https://adventofcode.com/2021/settings">[Settings]</a></li><li><a href="https://adventofcode.com/2021/auth/logout">[Log Out]</a></li></ul></nav><div class="user">Octopus in Vitro <span class="star-count">4*</span></div></div><div><h1 class="title-event">&nbsp;&nbsp;&nbsp;<span class="title-event-wrap">var y=</span><a href="https://adventofcode.com/2021">2021</a><span class="title-event-wrap">;</span></h1><nav><ul><li><a href="https://adventofcode.com/2021">[Calendar]</a></li><li><a href="https://adventofcode.com/2021/support">[AoC++]</a></li><li><a href="https://adventofcode.com/2021/sponsors">[Sponsors]</a></li><li><a href="https://adventofcode.com/2021/leaderboard">[Leaderboard]</a></li><li><a href="https://adventofcode.com/2021/stats">[Stats]</a></li></ul></nav></div></header>
-
-<div id="sidebar">
-<div id="sponsor"><div class="quiet">Our <a href="https://adventofcode.com/2021/sponsors">sponsors</a> help make Advent of Code possible:</div><div class="sponsor"><a href="https://www.honeycomb.io/" target="_blank" onclick="if(ga)ga('send','event','sponsor','sidebar',this.href);" rel="noopener">Honeycomb.io</a>
- - You like performant, correct code. So do we. Distributed systems
-should be easy to understand. Use Honeycomb for free to debug your
-distributed systems and get a free shirt. Download our white papers and
-watch our demo.</div></div>
-</div><!--/sidebar-->
-
-<main>
-<script async="" src="shared_files/analytics.js"></script><script>window.addEventListener('click', function(e,s,r){if(e.target.nodeName==='CODE'&&e.detail===3){s=window.getSelection();s.removeAllRanges();r=document.createRange();r.selectNodeContents(e.target);s.addRange(r);}});</script>
-<article class="day-desc"><h2>--- Day 2: Dive! ---</h2><p>Now, you need to figure out how to <span title="Tank, I need a pilot program for a B212 helicopter.">pilot this thing</span>.</p>
-<p>It seems like the submarine can take a series of commands like <code>forward 1</code>, <code>down 2</code>, or <code>up 3</code>:</p>
-<ul>
-<li><code>forward X</code> increases the horizontal position by <code>X</code> units.</li>
-<li><code>down X</code> <em>increases</em> the depth by <code>X</code> units.</li>
-<li><code>up X</code> <em>decreases</em> the depth by <code>X</code> units.</li>
-</ul>
-<p>Note that since you're on a submarine, <code>down</code> and <code>up</code> affect your <em>depth</em>, and so they have the opposite result of what you might expect.</p>
-<p>The submarine seems to already have a planned course (your puzzle
-input). You should probably figure out where it's going. For example:</p>
-<pre><code>forward 5
+<!DOCTYPE html><html lang=en-us><meta content="text/html; charset=UTF-8"http-equiv=content-type><meta charset=utf-8><title>Day 2 - Advent of Code 2021</title><!--[if lt IE 9]><script src=/static/html5.js></script><![endif]--><link href=shared_files/css.css rel=stylesheet><link href=shared_files/style.css rel=stylesheet><link href=shared_files/highcontrast.css rel="stylesheet alternate"title="High Contrast"><link href=https://adventofcode.com/favicon.png rel="shortcut icon"><header><div><h1 class=title-global><a href=https://adventofcode.com/ >Advent of Code</a></h1><nav><ul><li><a href=https://adventofcode.com/2021/about>[About]</a><li><a href=https://adventofcode.com/2021/events>[Events]</a><li><a href=https://teespring.com/stores/advent-of-code target=_blank>[Shop]</a><li><a href=https://adventofcode.com/2021/settings>[Settings]</a><li><a href=https://adventofcode.com/2021/auth/logout>[Log Out]</a></ul></nav><div class=user>Octopus in Vitro <span class=star-count>4*</span></div></div><div><h1 class=title-event><span class=title-event-wrap>var y=</span><a href=https://adventofcode.com/2021>2021</a><span class=title-event-wrap>;</span></h1><nav><ul><li><a href=https://adventofcode.com/2021>[Calendar]</a><li><a href=https://adventofcode.com/2021/support>[AoC++]</a><li><a href=https://adventofcode.com/2021/sponsors>[Sponsors]</a><li><a href=https://adventofcode.com/2021/leaderboard>[Leaderboard]</a><li><a href=https://adventofcode.com/2021/stats>[Stats]</a></ul></nav></div></header><div id=sidebar><div id=sponsor><div class=quiet>Our <a href=https://adventofcode.com/2021/sponsors>sponsors</a> help make Advent of Code possible:</div><div class=sponsor><a href=https://www.honeycomb.io/ target=_blank onclick='ga&&ga("send","event","sponsor","sidebar",this.href)'rel=noopener>Honeycomb.io</a> - You like performant, correct code. So do we. Distributed systems should be easy to understand. Use Honeycomb for free to debug your distributed systems and get a free shirt. Download our white papers and watch our demo.</div></div></div><main><script async src=shared_files/analytics.js></script><script>window.addEventListener("click",function(e,t,n){"CODE"===e.target.nodeName&&3===e.detail&&(t=window.getSelection(),t.removeAllRanges(),n=document.createRange(),n.selectNodeContents(e.target),t.addRange(n))})</script><article class=day-desc><h2>--- Day 2: Dive! ---</h2><p>Now, you need to figure out how to <span title="Tank, I need a pilot program for a B212 helicopter.">pilot this thing</span>.<p>It seems like the submarine can take a series of commands like <code>forward 1</code>, <code>down 2</code>, or <code>up 3</code>:<ul><li><code>forward X</code> increases the horizontal position by <code>X</code> units.<li><code>down X</code> <em>increases</em> the depth by <code>X</code> units.<li><code>up X</code> <em>decreases</em> the depth by <code>X</code> units.</ul><p>Note that since you're on a submarine, <code>down</code> and <code>up</code> affect your <em>depth</em>, and so they have the opposite result of what you might expect.<p>The submarine seems to already have a planned course (your puzzle input). You should probably figure out where it's going. For example:<pre><code>forward 5
 down 5
 forward 8
 up 3
 down 8
 forward 2
-</code></pre>
-<p>Your horizontal position and depth both start at <code>0</code>. The steps above would then modify them as follows:</p>
-<ul>
-<li><code>forward 5</code> adds <code>5</code> to your horizontal position, a total of <code>5</code>.</li>
-<li><code>down 5</code> adds <code>5</code> to your depth, resulting in a value of <code>5</code>.</li>
-<li><code>forward 8</code> adds <code>8</code> to your horizontal position, a total of <code>13</code>.</li>
-<li><code>up 3</code> decreases your depth by <code>3</code>, resulting in a value of <code>2</code>.</li>
-<li><code>down 8</code> adds <code>8</code> to your depth, resulting in a value of <code>10</code>.</li>
-<li><code>forward 2</code> adds <code>2</code> to your horizontal position, a total of <code>15</code>.</li>
-</ul>
-<p>After following these instructions, you would have a horizontal position of <code>15</code> and a depth of <code>10</code>. (Multiplying these together produces <code><em>150</em></code>.)</p>
-<p>Calculate the horizontal position and depth you would have after following the planned course. <em>What do you get if you multiply your final horizontal position by your final depth?</em></p>
-</article>
-<p>Your puzzle answer was <code>1804520</code>.</p><article class="day-desc"><h2 id="part2">--- Part Two ---</h2><p>Based
- on your calculations, the planned course doesn't seem to make any
-sense. You find the submarine manual and discover that the process is
-actually slightly more complicated.</p>
-<p>In addition to horizontal position and depth, you'll also need to track a third value, <em>aim</em>, which also starts at <code>0</code>. The commands also mean something entirely different than you first thought:</p>
-<ul>
-<li><code>down X</code> <em>increases</em> your aim by <code>X</code> units.</li>
-<li><code>up X</code> <em>decreases</em> your aim by <code>X</code> units.</li>
-<li><code>forward X</code> does two things:<ul>
-  <li>It increases your horizontal position by <code>X</code> units.</li>
-  <li>It increases your depth by your aim <em>multiplied by</em> <code>X</code>.</li>
-</ul></li>
-</ul>
-<p>Again note that since you're on a submarine, <code>down</code> and <code>up</code> do the opposite of what you might expect: "down" means aiming in the positive direction.</p>
-<p>Now, the above example does something different:</p>
-<ul>
-<li><code>forward 5</code> adds <code>5</code> to your horizontal position, a total of <code>5</code>. Because your aim is <code>0</code>, your depth does not change.</li>
-<li><code>down 5</code> adds <code>5</code> to your aim, resulting in a value of <code>5</code>.</li>
-<li><code>forward 8</code> adds <code>8</code> to your horizontal position, a total of <code>13</code>. Because your aim is <code>5</code>, your depth increases by <code>8*5=40</code>.</li>
-<li><code>up 3</code> decreases your aim by <code>3</code>, resulting in a value of <code>2</code>.</li>
-<li><code>down 8</code> adds <code>8</code> to your aim, resulting in a value of <code>10</code>.</li>
-<li><code>forward 2</code> adds <code>2</code> to your horizontal position, a total of <code>15</code>.  Because your aim is <code>10</code>, your depth increases by <code>2*10=20</code> to a total of <code>60</code>.</li>
-</ul>
-<p>After following these new instructions, you would have a horizontal position of <code>15</code> and a depth of <code>60</code>. (Multiplying these produces <code><em>900</em></code>.)</p>
-<p>Using this new interpretation of the commands, calculate the
-horizontal position and depth you would have after following the planned
- course. <em>What do you get if you multiply your final horizontal position by your final depth?</em></p>
-</article>
-<p>Your puzzle answer was <code>1971095320</code>.</p><p class="day-success">Both parts of this puzzle are complete! They provide two gold stars: **</p>
-<p>At this point, you should <a href="https://adventofcode.com/2021">return to your Advent calendar</a> and try another puzzle.</p>
-<p>If you still want to see it, you can <a href="https://adventofcode.com/2021/day/2/input" target="_blank">get your puzzle input</a>.</p>
-<p>You can also <span class="share">[Share<span class="share-content">on
-  <a href="https://twitter.com/intent/tweet?text=I%27ve+completed+%22Dive%21%22+%2D+Day+2+%2D+Advent+of+Code+2021&amp;url=https%3A%2F%2Fadventofcode%2Ecom%2F2021%2Fday%2F2&amp;related=ericwastl&amp;hashtags=AdventOfCode" target="_blank">Twitter</a>
-  <a href="javascript:void(0);" onclick="var mastodon_instance=prompt('Mastodon Instance / Server Name?'); if(typeof mastodon_instance==='string' &amp;&amp; mastodon_instance.length){this.href='https://'+mastodon_instance+'/share?text=I%27ve+completed+%22Dive%21%22+%2D+Day+2+%2D+Advent+of+Code+2021+%23AdventOfCode+https%3A%2F%2Fadventofcode%2Ecom%2F2021%2Fday%2F2'}else{return false;}" target="_blank">Mastodon</a></span>]</span> this puzzle.</p>
-</main>
-
-<!-- ga -->
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-ga('create', 'UA-69522494-1', 'auto');
-ga('set', 'anonymizeIp', true);
-ga('send', 'pageview');
-</script>
-<!-- /ga -->
-
-</body></html>
+</code></pre><p>Your horizontal position and depth both start at <code>0</code>. The steps above would then modify them as follows:<ul><li><code>forward 5</code> adds <code>5</code> to your horizontal position, a total of <code>5</code>.<li><code>down 5</code> adds <code>5</code> to your depth, resulting in a value of <code>5</code>.<li><code>forward 8</code> adds <code>8</code> to your horizontal position, a total of <code>13</code>.<li><code>up 3</code> decreases your depth by <code>3</code>, resulting in a value of <code>2</code>.<li><code>down 8</code> adds <code>8</code> to your depth, resulting in a value of <code>10</code>.<li><code>forward 2</code> adds <code>2</code> to your horizontal position, a total of <code>15</code>.</ul><p>After following these instructions, you would have a horizontal position of <code>15</code> and a depth of <code>10</code>. (Multiplying these together produces <code><em>150</em></code>.)<p>Calculate the horizontal position and depth you would have after following the planned course. <em>What do you get if you multiply your final horizontal position by your final depth?</em></article><p>Your puzzle answer was <code>1804520</code>.<article class=day-desc><h2 id=part2>--- Part Two ---</h2><p>Based on your calculations, the planned course doesn't seem to make any sense. You find the submarine manual and discover that the process is actually slightly more complicated.<p>In addition to horizontal position and depth, you'll also need to track a third value, <em>aim</em>, which also starts at <code>0</code>. The commands also mean something entirely different than you first thought:<ul><li><code>down X</code> <em>increases</em> your aim by <code>X</code> units.<li><code>up X</code> <em>decreases</em> your aim by <code>X</code> units.<li><code>forward X</code> does two things:<ul><li>It increases your horizontal position by <code>X</code> units.<li>It increases your depth by your aim <em>multiplied by</em> <code>X</code>.</ul></ul><p>Again note that since you're on a submarine, <code>down</code> and <code>up</code> do the opposite of what you might expect: "down" means aiming in the positive direction.<p>Now, the above example does something different:<ul><li><code>forward 5</code> adds <code>5</code> to your horizontal position, a total of <code>5</code>. Because your aim is <code>0</code>, your depth does not change.<li><code>down 5</code> adds <code>5</code> to your aim, resulting in a value of <code>5</code>.<li><code>forward 8</code> adds <code>8</code> to your horizontal position, a total of <code>13</code>. Because your aim is <code>5</code>, your depth increases by <code>8*5=40</code>.<li><code>up 3</code> decreases your aim by <code>3</code>, resulting in a value of <code>2</code>.<li><code>down 8</code> adds <code>8</code> to your aim, resulting in a value of <code>10</code>.<li><code>forward 2</code> adds <code>2</code> to your horizontal position, a total of <code>15</code>. Because your aim is <code>10</code>, your depth increases by <code>2*10=20</code> to a total of <code>60</code>.</ul><p>After following these new instructions, you would have a horizontal position of <code>15</code> and a depth of <code>60</code>. (Multiplying these produces <code><em>900</em></code>.)<p>Using this new interpretation of the commands, calculate the horizontal position and depth you would have after following the planned course. <em>What do you get if you multiply your final horizontal position by your final depth?</em></article><p>Your puzzle answer was <code>1971095320</code>.<p class=day-success>Both parts of this puzzle are complete! They provide two gold stars: **<p>At this point, you should <a href=https://adventofcode.com/2021>return to your Advent calendar</a> and try another puzzle.<p>If you still want to see it, you can <a href=https://adventofcode.com/2021/day/2/input target=_blank>get your puzzle input</a>.<p>You can also <span class=share>[Share<span class=share-content>on <a href="https://twitter.com/intent/tweet?text=I%27ve+completed+%22Dive%21%22+%2D+Day+2+%2D+Advent+of+Code+2021&url=https%3A%2F%2Fadventofcode%2Ecom%2F2021%2Fday%2F2&related=ericwastl&hashtags=AdventOfCode"target=_blank>Twitter</a> <a href=javascript:void(0); target=_blank onclick='var e=prompt("Mastodon Instance / Server Name?");return"string"==typeof e&&e.length?void(this.href="https://"+e+"/share?text=I%27ve+completed+%22Dive%21%22+%2D+Day+2+%2D+Advent+of+Code+2021+%23AdventOfCode+https%3A%2F%2Fadventofcode%2Ecom%2F2021%2Fday%2F2"):!1'>Mastodon</a></span>]</span> this puzzle.</main><script>!function(e,a,n,t,c,o,s){e.GoogleAnalyticsObject=c,e[c]=e[c]||function(){(e[c].q=e[c].q||[]).push(arguments)},e[c].l=1*new Date,o=a.createElement(n),s=a.getElementsByTagName(n)[0],o.async=1,o.src=t,s.parentNode.insertBefore(o,s)}(window,document,"script","//www.google-analytics.com/analytics.js","ga"),ga("create","UA-69522494-1","auto"),ga("set","anonymizeIp",!0),ga("send","pageview")</script>
